# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcapplication.h  rpcheader.pb.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  test.pb.h  test.proto
